2008-11-12  Robert Staudinger  <robsta@gnome.org>

	reported by: Thomas Wood <thomas@linux.intel.com>

	* configure.in: link ccss against ccss-cairo libs until cairo split-out is complete.

2008-11-12  Robert Staudinger  <robsta@gnome.org>

	* configure.in: try to use librsvg unless explicitly disabled.

2008-11-12  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-block.c (ccss_block_new_border_image),
	(ccss_block_get_border_image):
	* ccss/ccss-block.h:
	* ccss/ccss-border-image-parser.c (parse_tiling),
	(ccss_block_parse_border_image):
	* ccss/ccss-border-image.h:
	* ccss/ccss-property.c (ccss_property_border_image):
	* ccss/ccss-property.h:
	Parsing of `border-image' properties.

2008-11-11  Thomas Wood <thomas@linux.intel.com>

	* ccss/Makefile.am:
	* ccss/ccss-stylesheet.h:
	Fix public header separation and installation.

2008-11-11  Robert Staudinger  <robsta@gnome.org>

	* ccss/Makefile.am:
	* ccss/ccss-border-image-parser.c:
	* ccss/ccss-border-image-parser.h:
	More `border-image' skeleton code.

2008-11-11  Robert Staudinger  <robsta@gnome.org>

	* ccss/Makefile.am:
	* ccss/ccss-border-image.c:
	* ccss/ccss-border-image.h:
	Add `border-image' skeleton.

2008-11-11  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-stylesheet.c (ccss_stylesheet_add_from_file),
	(query_node), (query_container_r), (ccss_stylesheet_query):
	* ccss/ccss-stylesheet.h:
	* ccss/ccss.sym:
	* doc/ccss-sections.txt:
	* doc/tmpl/ccss-unused.sgml:
	* doc/tmpl/stylesheet.sgml:
	Better naming consistency.

2008-11-07  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss.h: small cleanup.

2008-11-07  Robert Staudinger  <robsta@gnome.org>

	* Makefile.am:
	* TODO:
	* ccss-clutter/Makefile.am:
	* ccss-clutter/ccss-clutter.c (ccss_clutter_paint):
	* ccss-clutter/ccss-clutter.h:
	* ccss-clutter/example-2.c (create_actor):
	* ccss-gtk/Makefile.am:
	* ccss/Makefile.am:
	* configure.in:
	Fix linking.

2008-11-07  Robert Staudinger  <robsta@gnome.org>

	* cccss/Makefile.am: